// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component correctly with 0 bands 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
      "left": "617px",
      "marginBottom": "1rem",
      "position": "absolute",
      "top": "5rem",
      "transition": "left, 1s",
    }
  }
/>
`;

exports[`should set 'left' property correctly 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
      "left": "617px",
      "marginBottom": "1rem",
      "position": "absolute",
      "top": "5rem",
      "transition": "left, 1s",
    }
  }
/>
`;

exports[`should set 'left' property correctly 2`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
      "left": "407px",
      "marginBottom": "1rem",
      "position": "absolute",
      "top": "5rem",
      "transition": "left, 1s",
    }
  }
>
  <BandItem
    key="one"
    name="one"
    url="wwww.1img.com"
  />
</div>
`;

exports[`should set 'left' property correctly 3`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
      "left": "-13px",
      "marginBottom": "1rem",
      "position": "absolute",
      "top": "5rem",
      "transition": "left, 1s",
    }
  }
>
  <BandItem
    key="one"
    name="one"
    url="wwww.1img.com"
  />
  <BandItem
    key="two"
    name="two"
    url="wwww.2img.com"
  />
  <BandItem
    key="three"
    name="three"
    url="wwww.3img.com"
  />
</div>
`;

exports[`should set 'left' property correctly 4`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
      "left": "-643px",
      "marginBottom": "1rem",
      "position": "absolute",
      "top": "5rem",
      "transition": "left, 1s",
    }
  }
>
  <BandItem
    key="one"
    name="one"
    url="wwww.1img.com"
  />
  <BandItem
    key="two"
    name="two"
    url="wwww.2img.com"
  />
  <BandItem
    key="three"
    name="three"
    url="wwww.3img.com"
  />
  <BandItem
    key="four"
    name="four"
    url="wwww.4img.com"
  />
  <BandItem
    key="five"
    name="five"
    url="wwww.5img.com"
  />
  <BandItem
    key="six"
    name="six"
    url="wwww.6img.com"
  />
</div>
`;
